foodmatters.tv (archived on 2009-10-03)
{
  "alexa_rank": 161767,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 7508,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 15.26,
  "homepage_snapshot_redirected_domain": "foodmatters.tv",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090915044505id_/http://www.foodmatters.tv/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090915044505id_/http%3A//foodmatters.tv",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "foodmatters.tv",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091003130354id_/http%3A//www.foodmatters.tv/_webapp/privacy%2520policy",
  "policy_title": "Privacy Policy",
  "policy_url": "foodmatters.tv/_webapp/privacy%20policy",
  "sha1": "3f353b79b9156a9ac8544a673812643230dbfa75",
  "simhash": 9578436927063034050,
  "simhash_updated": false,
  "site_hostname": "foodmatters.tv",
  "site_url": "http://foodmatters.tv",
  "smog": 17.01,
  "strict_updated": false,
  "timestamp": "20091003130354",
  "word_count": 1183,
  "year": 2009
}

--- a/f/fo/foo/foodmatters.tv.html
+++ b/f/fo/foo/foodmatters.tv.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the foodmatters.tv privacy policy that was archived on 2009-05-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090523220955id_/http%3A//foodmatters.tv/_webapp/privacy%2520policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the foodmatters.tv privacy policy that was archived on 2009-10-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091003130354id_/http%3A//www.foodmatters.tv/_webapp/privacy%2520policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- BC_OBNW --><head>
 <title>Privacy Policy</title>
 <link href="/StyleSheets/ModuleStyleSheets.css" type="text/css" rel="StyleSheet">
-<script type="text/javascript">jslang='US';</script>
+<script type="text/javascript">var jslang='EN';</script>
 <link rel="stylesheet" href="/CatalystStyles/Box.css" type="text/css" media="screen">
 <script type="text/javascript" src="/CatalystScripts/Java_Box.js"></script>
 <link type="text/css" rel="stylesheet" href="/StyleSheets/Foodmatters.css">
@@ -45,7 +45,11 @@
             <li><a href="/">Home</a></li>
             <li><a href="/_webapp/The Film">The Film</a>
             <ul>
-                <li class="buy_the_dvd">
+                <li class="film_synopsis">
+	<a href="/_webapp/About The Film" class="screenshot" title="About The Film">About The Film</a>
+</li>
+
+<li class="buy_the_dvd">
 	<a href="/_webapp/Buy The DVD" class="screenshot" title="Buy The DVD">Buy The DVD</a>
 </li>
 
@@ -63,10 +67,6 @@
 
 <li class="screenings">
 	<a href="/_webapp/Screenings" class="screenshot" title="Screenings">Screenings</a>
-</li>
-
-<li class="film_synopsis">
-	<a href="/_webapp/Film Synopsis" class="screenshot" title="Film Synopsis">Film Synopsis</a>
 </li>
 
 <li class="the_team">
@@ -298,22 +298,22 @@ FoodMatters.tv (Permacology Productions Pty Ltd) reserves the right to change th
 
         </div>
         <div id="col03">
-        <div id="newsletter" class="widget">
+        <div class="widget" id="newsletter">
 <div class="top">Newsletter</div>
 <div class="content">
-<div class="newsletter-signup">Sign Up To Receive<br>
-Your Free Newsletter
-</div>
-<form action="/CampaignProcess.aspx?ListID=19413&amp;PageID=/_webapp/Newsletter Subscription Successful&amp;OPTIN=true" method="post" onsubmit="return checkWholeForm2305(this)" name="catemaillistform2305">
+<div class="newsletter-signup"><span style="font-size: 13px; color: #ffffff;"><strong>Sign Up For <span style="font-size: 13px;">Instant Access</span><br>
+to Our <span style="font-size: 13px;">Latest Newsletter
+</span></strong></span> </div>
+<form name="catemaillistform2305" onsubmit="return checkWholeForm2305(this)" method="post" action="/CampaignProcess.aspx?ListID=19413&amp;PageID=/_webapp/Newsletter Subscription Successful&amp;OPTIN=true">
     <div class="item">
-    <input type="text" maxlength="255" id="CLFullName" name="FullName" class="cat_textbox_small">
+    <input type="text" class="cat_textbox_small" name="FullName" id="CLFullName" maxlength="255">
     <label for="CLFullName">Name</label>
     </div>
     <div class="item">
-    <input type="text" maxlength="255" id="CLEmailAddress" name="EmailAddress" class="cat_textbox_small">
+    <input type="text" class="cat_textbox_small" name="EmailAddress" id="CLEmailAddress" maxlength="255">
     <label for="CLEmailAddress">Email</label>
     </div>
-    <a href="#" onclick="document.catemaillistform2305.submit()" class="btn sign-up">Sign Up</a>
+    <span style="font-size: 13px;"><a class="btn sign-up" onclick="document.catemaillistform2305.submit()" href="#">Sign Up</a></span>
     <script src="/CatalystScripts/ValidationFunctions.js" type="text/javascript"></script>
     <script type="text/javascript">
 						    function checkWholeForm2305(theForm){
@@ -321,31 +321,12 @@ Your Free Newsletter
 						    if (theForm.EmailAddress) why += checkEmail(theForm.EmailAddress.value);
 						    if (why != ""){alert(why);return false;}theForm.submit();return false;}</script>
 </form>
-<div class="newsletter-privacy">We respect your privacy and<br>
+<img alt="" src="/images/layout/privacy-padlock.gif" class="padlock">
+<div class="newsletter-privacy">We respect your <a href="/_webapp_158628/Privacy_Policy">privacy</a> and<br>
 will never share your details</div>
 </div>
 <div class="bottom"></div>
 </div>
-<!-- Google Code for Food Matters Newsletter Sign Up Conversion Page -->
-<script language="JavaScript" type="text/javascript">
-<!--
-var google_conversion_id = 1041016591;
-var google_conversion_language = "en_US";
-var google_conversion_format = "3";
-var google_conversion_color = "ffffff";
-var google_conversion_label = "fPoxCJ-miAEQj86y8AM";
-if (14.98) {
-  var google_conversion_value = 14.98;
-}
-//-->
-</script>
-<script language="JavaScript" src="http://www.googleadservices.com/pagead/conversion.js">
-</script>
-<noscript>
-<img height="1" width="1" border="0" src="http://www.googleadservices.com/pagead/conversion/1041016591/?value=14.98&amp;label=fPoxCJ-miAEQj86y8AM&amp;guid=ON&amp;script=0" />
-</noscript>
-
-
         <div id="main-quick-links" class="widget">
         <div class="top">Quick Links</div>
         <div class="content">
@@ -373,11 +354,7 @@ if (14.98) {
 <div id="detoxification" class="page-list">
 	<em><a href="/_webapp/Detox and Rejuvenation Guide">Detox &amp; Rejuvenation Guide</a></em>
 	<h4><a href="/_webapp/Detox and Rejuvenation Guide">Detox &amp; Rejuvenation Guide</a></h4>
-	<div class="description">The Food Matters Detox and Rejuvenation Guide will help you find better alternatives for the foods your body might not agree with....
- 
- 
-
- The te..</div>
+	<div class="description">The Food Matters Detox and Rejuvenation Guide is an informative guide that will teach you how to apply the principles addressed in the film. This inst..</div>
 	<a href="/_webapp/Detox and Rejuvenation Guide" class="learn-more">Learn More</a>
 </div>
 
@@ -399,7 +376,11 @@ if (14.98) {
         <div class="col">
         <h1><a href="/_webapp/The Film">The Film</a></h1>
         <ul>
-            <li class="buy_the_dvd">
+            <li class="film_synopsis">
+	<a href="/_webapp/About The Film" class="screenshot" title="About The Film">About The Film</a>
+</li>
+
+<li class="buy_the_dvd">
 	<a href="/_webapp/Buy The DVD" class="screenshot" title="Buy The DVD">Buy The DVD</a>
 </li>
 
@@ -417,10 +398,6 @@ if (14.98) {
 
 <li class="screenings">
 	<a href="/_webapp/Screenings" class="screenshot" title="Screenings">Screenings</a>
-</li>
-
-<li class="film_synopsis">
-	<a href="/_webapp/Film Synopsis" class="screenshot" title="Film Synopsis">Film Synopsis</a>
 </li>
 
 <li class="the_team">
