--- a/h/ho/hot/hotel.net.html
+++ b/h/ho/hot/hotel.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hotel.net privacy policy that was archived on 2009-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090626010325id_/http%3A//www.hotel.net/privacy-and-security.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hotel.net privacy policy that was archived on 2009-10-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091003171251id_/http%3A//hotel.net/privacy-and-security.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/RomeTemplate2.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="Metatags" --><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
