--- a/c/co/cop/copyright.com.html
+++ b/c/co/cop/copyright.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the copyright.com privacy policy that was archived on 2009-06-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090614234311id_/http%3A//www.copyright.com/ccc/viewPage.do%3FpageCode%3Di3) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the copyright.com privacy policy that was archived on 2009-10-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091004024157id_/http%3A//www.copyright.com/ccc/viewPage.do%3FpageCode%3Di3) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
        
@@ -918,6 +918,20 @@ definemenu();
 		<div class="clearer"></div>
  </div>
 </div>
+<script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+
+    document.write(unescape("%3Cscript src='" + gaJsHost +
+        "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+    try {
+        var pageTracker = _gat._getTracker("UA-9376938-1");
+        pageTracker._trackPageview();
+    } 
+    catch(err) {}
+</script>
 <!-- End Footer -->
 
 	
