--- a/c/cf/cfn/cfnmdogging.com.html
+++ b/c/cf/cfn/cfnmdogging.com.html
@@ -1,7 +1,8 @@
-<!--The following is the downloaded HTML source of the cfnmdogging.com privacy policy that was archived on 2009-05-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090513204138id_/http%3A//www.cfnmdogging.com/policy.php%3Fid%3D%26ref%3Dbookmark) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cfnmdogging.com privacy policy that was archived on 2009-10-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091005153902id_/http%3A//www.cfnmdogging.com/policy.php) for the most accurate reproduction.-->
 
-<html><head><title>Privacy Policy</title> </head><body> 
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>Privacy Policy</title> </head><body> 
 <div align="left">   
 <p align="center"><b><font size="5">Privacy Policy</font></b></p>   
 <p>Our Commitment To Privacy: <br>     
@@ -11,4 +12,4 @@
 <br>     Should you have other questions or concerns about these privacy policies, please send us an email at <a href="mailto:privacy@gladirex.com">privacy@gladirex.com</a>. <br>     
 <br>   
 </p>   
-<center>Copyright © 2005-2009 GLADIREX (EASTERN TECHNICAL s.r.o.). All rights reserved.</center> </div></body></html>
+<center>Copyright © 2005-2009 GLADIREX. All rights reserved.</center> </div></body></html>
