--- a/v/va/vat/vator.tv.html
+++ b/v/va/vat/vator.tv.html
@@ -1,16 +1,16 @@
-<!--The following is the downloaded HTML source of the vator.tv privacy policy that was archived on 2009-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090627211516id_/http%3A//vator.tv/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vator.tv privacy policy that was archived on 2009-10-06.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091006032017id_/http%3A//vator.tv/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en-US"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Vator.tv - Privacy Notice</title>
-<link href="http://assets.vator.tv/stylesheets/cache_vator.css?1245853209" media="screen" rel="stylesheet" type="text/css"><link href="http://assets.vator.tv/stylesheets/cache_vator_old.css?1245853209" media="screen" rel="stylesheet" type="text/css"><link href="http://assets.vator.tv/stylesheets/cache_an_vator.css?1245853209" media="screen" rel="stylesheet" type="text/css"><link href="http://assets.vator.tv/stylesheets/ac.css?1245853187" media="screen" rel="stylesheet" type="text/css">
-<script src="http://assets.vator.tv/javascripts/prototype.js?1245853187" type="text/javascript"></script>
-<script src="http://assets.vator.tv/javascripts/cache_effects.js?1245853209" type="text/javascript"></script>
-<script src="http://assets.vator.tv/javascripts/cache_vator.js?1245853209" type="text/javascript"></script>
-<script src="http://assets.vator.tv/javascripts/cache_jquery.js?1245853209" type="text/javascript"></script>
-<script type="text/javascript">var $j = jQuery.noConflict();</script><script src="http://assets.vator.tv/javascripts/lightwindow.js?1245853187" type="text/javascript"></script>
-<script src="http://assets.vator.tv/javascripts/autocomplete.js?1245853187" type="text/javascript"></script>
-<script src="http://assets.vator.tv/javascripts/ac.js?1245853187" type="text/javascript"></script>
+<link href="http://assets.vator.tv/stylesheets/cache_vator.css?1254421717" media="screen" rel="stylesheet" type="text/css"><link href="http://assets.vator.tv/stylesheets/cache_vator_old.css?1254421717" media="screen" rel="stylesheet" type="text/css"><link href="http://assets.vator.tv/stylesheets/cache_an_vator.css?1254421717" media="screen" rel="stylesheet" type="text/css"><link href="http://assets.vator.tv/stylesheets/ac.css?1254421717" media="screen" rel="stylesheet" type="text/css">
+<script src="http://assets.vator.tv/javascripts/prototype.js?1254421717" type="text/javascript"></script>
+<script src="http://assets.vator.tv/javascripts/cache_effects.js?1254421717" type="text/javascript"></script>
+<script src="http://assets.vator.tv/javascripts/cache_vator.js?1254421717" type="text/javascript"></script>
+<script src="http://assets.vator.tv/javascripts/cache_jquery.js?1254421717" type="text/javascript"></script>
+<script type="text/javascript">var $j = jQuery.noConflict();</script><script src="http://assets.vator.tv/javascripts/lightwindow.js?1254421717" type="text/javascript"></script>
+<script src="http://assets.vator.tv/javascripts/autocomplete.js?1254421717" type="text/javascript"></script>
+<script src="http://assets.vator.tv/javascripts/ac.js?1254421717" type="text/javascript"></script>
 
 <link rel="alternate" type="application/rss+xml" title="VatorNews - RSS" href="http://feeds.vator.tv/vatortv/news">
 <link rel="shortcut icon" href="/images/favicon.ico">
@@ -35,7 +35,7 @@
 	<div class="leaderboard">
 	
 			
-		<a href="/partners/microsoft/bizspark"><img alt="Microsoft BizSpark. Want to give your startup a boost? Expand your network and get the lastest Microsoft development tools, with no upfront costs." border="0" src="http://assets.vator.tv/images/partners/microsoft/bizspark/BizSpark-green-leaderboard.gif?1245853187"></a>
+		<a href="/partners/microsoft/bizspark"><img alt="Microsoft BizSpark. Want to give your startup a boost? Expand your network and get the lastest Microsoft development tools, with no upfront costs." border="0" src="http://assets.vator.tv/images/partners/microsoft/bizspark/BizSpark-blue-leaderboard.gif?1254421717"></a>
 	
 	</div>
 	<div class="clear"></div>
@@ -105,11 +105,48 @@
 <p><strong>Information We Collect</strong></p>
 <ul>
 	<li><strong>Information you provide:</strong> You provide certain personally identifiable information (such as your name, contact information, other PII and other information volunteered by you) to Vator.tv when choosing to participate in various activities on the Vator.tv Sites such as uploading videos or other media files, posting messages in our forums or in the video comments section, entering contests or sweepstakes, taking advantage of promotions, responding to surveys, or subscribing to newsletters or other mailing lists. If you upload content to the Vator.tv Website, the content will be governed by the Terms of Use and any other terms or conditions on the upload pages.</li>
-	<li><strong>Vator.tv Cookies:</strong> When you visit the Vator.tv Website, we send one or more cookies - a small file containing a string of alphanumeric characters - to your computer that uniquely identifies your browser. We use cookies to improve the quality of our service by storing user preferences and tracking user trends. Most browsers are initially set up to accept cookies, but you can reset your browser to refuse all cookies or to indicate when a cookie is being sent. However, some Vator.tv features and services may not function properly if your cookies are disabled. We use cookies for many purposes such as to save your password so you don't have to re-enter it each time you visit our site. We also use cookies to deliver content (which may include third party advertisements) specific to your interests. Vator.tv may set and access Vator.tv "cookies" on your computer. Vator.tv lets other companies that show advertisements on some of our pages set and access their cookies on your computer. Vator.tv uses both session cookies and persistent cookies. A persistent cookie remains after you close your browser. Persistent cookies may be used by your browser on subsequent visits to the site. Persistent cookies can be removed by following your web browser help file directions. A session cookie is temporary and disappears after you close your browser. Advertisers or other companies do not have access to Vator.tv's cookies. Other companies' use of their cookies is subject to their own privacy policies, not this one. Vator.tv has no control over the information collected from or about you by any third party after you have left the Vator.tv Sites.</li>
-	<li><strong>Log Information:</strong> When you use the Vator.tv Sites, our servers automatically record information that your browser sends whenever you visit any website. These server logs may include information such as your web request, Internet Protocol ("IP") address, browser type, browser language, referring/exit pages and URLs, platform type, number of clicks, domain names, landing pages, pages viewed and the order of those pages, the amount of time spent on particular pages, the date and time of your request, and one or more cookies that may uniquely identify your browser.</li>
-	<li><strong>Clear GIFs Information:</strong> When you use the Vator.tv Sites, we may employ "clear GIFs" (a.k.a. Web Beacons) which are used to track the online usage patterns of our Users anonymously (i.e., in a non-personally-identifiable manner). In addition, we may also use clear GIFs in HTML-based emails sent to our users to track which emails are opened by recipients.</li>
-	<li><strong>User communications</strong> - When you send email or other communication to Vator.tv, we may retain those communications in order to process your inquiries, respond to your requests and improve our services.</li>
-	<li><strong>Third-party Advertisers, Links to Other Sites</strong> - This Privacy Policy applies to websites and services that are owned and operated by Vator.tv. By clicking on links to other websites, advertisers and other third parties, you are leaving the Site. Once you have left the Vator.tv Sites, Vator.tv does not control the data collection and privacy practices, or other activities, of any third party linked to this Site and Vator.tv assumes no liability and is not responsible for any practices of such third party websites. Vator.tv allows other companies, called third-party ad servers or ad networks, to serve advertisements within the Vator.tv Sites. These third-party ad servers or ad networks use technology to send, directly to your browser, the advertisements and links that appear on the Vator.tv Sites. They automatically receive your IP address when this happens. They may also use other technologies (such as cookies, JavaScript, or Web Beacons) to measure the effectiveness of their advertisements and to personalize the advertising content. Vator.tv does not provide any personally identifiable information to these third-party ad servers or ad networks without your consent or except as part of a specific program or feature for which you will have the ability to opt-in or opt-out. However, please note that if an advertiser asks Vator.tv to show an advertisement to a certain audience (for example, men ages 18-34) or audience segment (for example, men ages 18-24 who have viewed certain channels of content) and you respond to that advertisement, the advertiser or ad-server may conclude that you fit the description of the audience they are trying to reach. You should consult the respective privacy policies of these third-party ad servers or ad networks. Vator.tv's privacy policy does not apply to, and we cannot control the activities of, such other advertisers or web sites.</li>
+	<li><strong>Vator.tv Cookies:</strong> When you visit the Vator.tv Website, we send one or more cookies
+		- a small file containing a string of alphanumeric characters - to your computer that uniquely identifies
+		your browser. We use cookies to improve the quality of our service by storing user preferences and tracking user trends.
+		Most browsers are initially set up to accept cookies, but you can reset your browser to refuse all cookies or
+		to indicate when a cookie is being sent. However, some Vator.tv features and services may not function properly
+		if your cookies are disabled. We use cookies for many purposes such as to save your password so you don't have
+		to re-enter it each time you visit our site. We also use cookies to deliver content (which may include third party advertisements)
+		specific to your interests. Vator.tv may set and access Vator.tv "cookies" on your computer. Vator.tv let's
+		other companies that show advertisements on some of our pages set and access their cookies on your computer.
+		Vator.tv uses both session cookies and persistent cookies. A persistent cookie remains after you close your browser.
+		Persistent cookies may be used by your browser on subsequent visits to the site. Persistent cookies can be removed
+		by following your web browser help file directions. A session cookie is temporary and disappears after you close your browser.
+		Advertisers or other companies do not have access to Vator.tv's cookies. Other companies' use of their cookies is subject
+		to their own privacy policies, not this one. Vator.tv has no control over the information collected from or about you
+		by any third party after you have left the Vator.tv Sites.</li>
+	<li><strong>Log Information:</strong> When you use the Vator.tv Sites, our servers automatically record information that
+		your browser sends whenever you visit any website. These server logs may include information such as your web request,
+		Internet Protocol ("IP") address, browser type, browser language, referring/exit pages and URLs, platform type,
+		number of clicks, domain names, landing pages, pages viewed and the order of those pages, the amount of time spent
+		on particular pages, the date and time of your request, and one or more cookies that may uniquely identify your browser.</li>
+	<li><strong>Clear GIFs Information:</strong> When you use the Vator.tv Sites, we may employ "clear GIFs" (a.k.a. Web Beacons)
+		which are used to track the online usage patterns of our Users anonymously (i.e., in a non-personally-identifiable manner).
+		In addition, we may also use clear GIFs in HTML-based emails sent to our users to track which emails are opened by recipients.</li>
+	<li><strong>User communications</strong> - When you send email or other communication to Vator.tv, we may retain those communications
+		in order to process your inquiries, respond to your requests and improve our services.</li>
+	<li id="third-party-advertising"><p><strong>Third-party Advertisers, Links to Other Sites</strong> - This Privacy Policy applies to websites and services that
+		are owned and operated by Vator.tv.</p>
+		<p>By clicking on <strong>links to other websites</strong>, advertisers and other third parties, you are leaving the Site.
+		Once you have left the Vator.tv Sites, Vator.tv does not control the data collection and privacy practices, or other activities,
+		of any third party linked to this Site and Vator.tv assumes no liability and is not responsible for any practices of such third party websites.</p>
+		<p>Vator.tv allows other companies, called <strong>third-party ad servers or ad networks</strong>, to serve advertisements within the Vator.tv Sites.
+		These third-party ad servers or ad networks use technology to send, directly to your browser, the advertisements and links that appear
+		on the Vator.tv Sites. They automatically receive your IP address when this happens. They may also use other technologies
+		(such as cookies, JavaScript, or Web Beacons) to measure the effectiveness of their advertisements and to personalize the advertising content.
+		Vator.tv does not provide any personally identifiable information to these third-party ad servers or ad networks without your consent or except
+		as part of a specific program or feature for which you will have the ability to opt-in or opt-out. However, please note that if an advertiser
+		asks Vator.tv to show an advertisement to a certain audience (for example, men ages 18-34) or audience segment (for example, men ages 18-24 who
+		have viewed certain channels of content) and you respond to that advertisement, the advertiser or ad-server may conclude that you fit the description
+		of the audience they are trying to reach. You should consult the respective privacy policies of these third-party ad servers or ad networks.
+		Vator.tv's privacy policy does not apply to, and we cannot control the activities of, such other advertisers or web sites.</p>
+		<p>If you would like more information about this practice and to know your choices about not having this information used by these companies, 
+		<a href="http://www.google.com/privacy_ads.html" target="_blank">click here</a>.</p></li>
 </ul>
 
 <p><strong>How We Use Information</strong></p>
@@ -163,7 +200,7 @@
 
 <p><strong>Effective Date</strong></p>
 <br>
-<p>This privacy policy was last changed and posted on our Site on May 10, 2006.</p>
+<p>This privacy policy was last changed and posted on our Site on August 20, 2009 (version 2).</p>
 <br>
 
 <p><strong>Contact Information</strong></p>
@@ -190,7 +227,7 @@
 
 
 <script type="text/javascript">var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">var pageTracker = _gat._getTracker("UA-1680194-1");pageTracker._setDomainName("vator.tv");pageTracker._initData();pageTracker._trackPageview();</script>
+<script type="text/javascript">try{ var pageTracker = _gat._getTracker("UA-1680194-1");pageTracker._setDomainName(".vator.tv");pageTracker._trackPageview(); } catch(err) {}</script>
 
 
 <!-- Start Quantcast tag -->
@@ -199,7 +236,12 @@
 <noscript><a href="http://www.quantcast.com/p-02DngQO8LLuNQ" target="_blank"><img alt="Quantcast" border="0" height="1" src="http://pixel.quantserve.com/pixel/p-02DngQO8LLuNQ.gif" style="display: none;" width="1" /></a></noscript>
 <!-- End Quantcast tag -->
 
+<!-- Start Technorati Media Pixel -->
 <div id="technoratimedia-pixel"><script type="text/javascript" src="http://triad.technorati.com/technoratimedia-pixel.js"></script></div>
-
-
+<!-- End Technorati Media Pixel -->
+<!-- Begin comScore Tag -->
+<script>document.write(unescape("%3Cscript src='" + (document.location.protocol == "https:" ? "https://sb" : "http://b") + ".scorecardresearch.com/beacon.js' %3E%3C/script%3E"));</script><script src="https://sb.scorecardresearch.com/beacon.js"></script>
+<script>COMSCORE.beacon({ c1: 2, c2: '6036211', c3: '', c4: '', c5: '', c6: '', c15: '' });</script>
+<noscript><img src="http://b.scorecardresearch.com/b?c1=2&c2=&c3=&c4=&c5=&c6=&c15=&cv=1.3&cj=1" style="display:none" width="0" height="0" alt="" /></noscript>
+<!-- End comScore Tag -->
 </div></body></html>
