--- a/i/i-/i-l/i-love-dogs.com.html
+++ b/i/i-/i-l/i-love-dogs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the i-love-dogs.com privacy policy that was archived on 2008-09-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080915034259id_/http%3A//www.i-love-dogs.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the i-love-dogs.com privacy policy that was archived on 2009-10-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091007220734id_/http%3A//i-love-dogs.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>I-Love-Dogs.com Privacy Policy</title>
