--- a/d/de/dev/devasp.com.html
+++ b/d/de/dev/devasp.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the devasp.com privacy policy that was archived on 2009-05-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090524151347id_/http%3A//www.devasp.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the devasp.com privacy policy that was archived on 2009-10-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091008105136id_/http%3A//www.devasp.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
   <title>DevASP Privacy Policy</title>
@@ -75,20 +75,8 @@ function BookMarkThisPage(Title, URL)
     <table border="0" cellpadding="0" cellspacing="0" width="740">
       <tbody><tr>
         <td colspan="6" align="center">
-          <script type="text/javascript"><!--
-google_ad_client = "pub-8159070411425418";
-google_ad_width = 728;
-google_ad_height = 90;
-google_ad_format = "728x90_as";
-google_ad_channel ="8306012387";
-google_color_border = "336699";
-google_color_bg = "FFFFFF";
-google_color_link = "0000FF";
-google_color_url = "008000";
-google_color_text = "000000";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+          <a href="http://www.dpbolvw.net/fp65gv30v2IKKPPNJLIKJMRMORP" target="_top">
+<img src="http://www.awltovhc.com/jp79kpthnl688DDB79687AFACFD" alt="Top Recommended Hosting" border="0"></a>
         </td>
       </tr>
       <tr>
@@ -102,7 +90,7 @@ google_color_text = "000000";
             
             <a class="slink" href="/members/memberLogin.asp">Member Login</a> &nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font face="arial" size="2" color="FFFFFF">Active
-            Users:&nbsp;&nbsp;53</font>
+            Users:&nbsp;&nbsp;74</font>
         </b></td>
         <td align="right" bgcolor="#686898">
           <img src="/Images/corner2.gif" width="20" height="20" border="0"></td>
@@ -116,7 +104,7 @@ google_color_text = "000000";
                   <tbody><tr>
                     <td align="center" valign="top">
                       <a href="http://www.devasp.com">
-                        <img src="/images/devasplogo2.gif" alt="DevASP - ASP and XML Articles, Samples, Toturials, Sample Chapters and resources for Developers Sunday, May 24, 2009" border="0" width="100" height="30"></a></td>
+                        <img src="/images/devasplogo2.gif" alt="DevASP - ASP and XML Articles, Samples, Toturials, Sample Chapters and resources for Developers Thursday, October 08, 2009" border="0" width="100" height="30"></a></td>
                   </tr>
                   <tr>
                     <td valign="top">
@@ -163,8 +151,7 @@ google_color_text = "000000";
             </tr>
             <tr>
               <td align="center">
-                <img src="/images/clear.gif" width="1" height="6"><br><a href="http://www.anrdoezrs.net/click-1166402-10366947" target="_top">
-<img src="http://www.tqlkg.com/image-1166402-10366947" width="125" height="125" alt="Trusted by over 7 million customers!" border="0"></a><br>
+                <img src="/images/clear.gif" width="1" height="6"><br><a href="/ad_redirect.asp?ad_id=552" target="_New"><img src="http://www.lduhtrp.net/image-1166402-10483898" border="0" alt="ESET"></a>
 
               </td>
             </tr>
@@ -308,20 +295,7 @@ google_color_text = "000000";
       <td align="center">
         
         <center>
-          <script type="text/javascript"><!--
-google_ad_client = "pub-8159070411425418";
-google_ad_width = 160;
-google_ad_height = 600;
-google_ad_format = "160x600_as";
-google_ad_channel ="4915219479";
-google_color_border = "336699";
-google_color_bg = "FFFFFF";
-google_color_link = "0000FF";
-google_color_url = "008000";
-google_color_text = "000000";
-//--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+          <script type="text/javascript" language="javascript" src="http://www.qksz.net/1e-8re4"> </script>
           <img src="/Images/Clear.gif" width="1" height="2" border="0">
       </center></td>
     </tr>
