--- a/b/ba/bar/barbequesgalore.com.au.html
+++ b/b/ba/bar/barbequesgalore.com.au.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the barbequesgalore.com.au privacy policy that was archived on 2009-05-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090525082127id_/http%3A//www.barbequesgalore.com.au/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the barbequesgalore.com.au privacy policy that was archived on 2009-10-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091009194818id_/http%3A//www.barbequesgalore.com.au/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml"><head><title>
 	Barbeques Galore - Privacy Policy
-</title><meta content="text/html; charset=utf-8" http-equiv="Content-type"><meta name="robots" content="all">
+</title><meta content="text/html; charset=utf-8" http-equiv="Content-type"><meta name="robots" content="all"><meta name="description" content="Barbeques Galore - BBQ Better - Australia's leading retailer of bbqs, outdoor furniture, outdoor heating, wood heating and bbq accessories.">
 		<script src="/includes/swfobject.js" type="text/javascript"></script>
 		<script src="/includes/jquery.js?ver=1.3.2" type="text/javascript"></script>
 		<script src="/includes/jquery.innerfade.js" type="text/javascript"></script>
@@ -39,9 +39,9 @@
 				<div id="p-nav">
 					<ul id="primary-nav">
 						<li id="ctl00_htmNavShopLi" class="pn-shop"><a href="/" id="ctl00_htmNavShopHref">Products</a></li>
-						<li id="ctl00_htmNavCataloguesLi" class="pn-catalogues"><a href="/catalogues/winter-warmers.aspx" id="ctl00_htmNavCataloguesHref">CATALOGUES</a></li>
+						<li id="ctl00_htmNavCataloguesLi" class="pn-catalogues"><a href="/catalogues/better-barbeques.aspx" id="ctl00_htmNavCataloguesHref">CATALOGUES</a></li>
 						<li id="ctl00_htmNavStoreFinderLi" class="pn-storefinder"><a href="/storefinder/index.aspx" id="ctl00_htmNavStoreFinderHref">STORE FINDER</a></li>
-						<li id="ctl00_htmNavBBQExpertLi" class="pn-bbqexpert"><a href="/bbq-expert/ben-odonoghue.aspx" id="ctl00_htmNavBBQExpertHref">BBQ EXPERT</a></li>
+						<li id="ctl00_htmNavBBQExpertLi" class="pn-bbqexpert"><a href="/bbq-expert/recipes/" id="ctl00_htmNavBBQExpertHref">BBQ EXPERT</a></li>
 						<li id="ctl00_htmNavAboutUsLi" class="pn-aboutus selected"><a href="/about-us/contact-us.aspx" id="ctl00_htmNavAboutUsHref" class="selected">ABOUT US</a></li>
 					</ul>
 				</div>
@@ -56,7 +56,7 @@
 								</ContentTemplate>
 							</aspUpdatePanel>							
 						</li>-->
-						<li><a href="#vip" title="Join the VIP club">VIP Club</a></li>
+						<li><a href="/news/news.aspx?cid=2" title="News and Events">News</a></li>
 						<li><a href="/customer-service/overview.aspx" title="">Customer Service</a></li>
 						<li><a href="/bbq-expert/bbq-schools.aspx" title="">BBQ Schools</a></li>
 						<!--<li><a href="/myaccount/login.aspx" title="">My Account</a></li>-->
@@ -158,8 +158,11 @@
 					</ul>
 				</div>
 
+
 				<p><strong>Want to find your nearest store</strong><br>
 				Take a look at our <a href="/storefinder/index.aspx" title="Find your nearest store" class="standout">store finder.</a></p>		
+				
+				
 			</div><!-- #split-side ends -->
 		</div><!-- #content-split ends -->
 	</div><!-- #content ends -->
@@ -226,7 +229,6 @@
 				</div>				
 			</div><!-- #footer ends -->	
 		</div><!-- #container ends -->
-			
 		
 <input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEWAwLH0p/wCALE5ML0AgKz5c7ZBRUv+ZV3W1dJiDH5wIeyb7XkCyBr">
 
