--- a/r/ri/rin/ringcentral.com.html
+++ b/r/ri/rin/ringcentral.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ringcentral.com privacy policy that was archived on 2009-06-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090605025832id_/http%3A//www.ringcentral.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ringcentral.com privacy policy that was archived on 2009-10-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091010001221id_/http%3A//www.ringcentral.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/transitional.dtd"><html lang="en"><head>
 <title>RINGCENTRAL SERVICE PRIVACY POLICY</title>
@@ -19,23 +19,23 @@ browser_version = parseFloat(navigator.appVersion);
 <script type="text/javascript" src="/js/inc/blinkimg.js"></script>
 <script src="/js/inc/controlhomepage.js" type="text/javascript"></script>
 
-<!-- begin RSS script engine -->
-<script type="text/javascript" src="/js/inc/rss/RssControler.js"></script></head><body marginheight="0" marginwidth="0"><span id="showControl" style="background-color:white;position:absolute;left:0px;top:0px;z-Index:10000"></span>
-<script type="text/javascript" src="/js/inc/rss/TrimPath.js"></script>
-<!-- end RSS script engine -->
+<meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
 
-<script type="text/javascript" src="/js/myjs_2/classes/tools/tools.js"></script><span id="showControl" ondblclick="this.innerHTML = ''" style="background-color:white;position:absolute;left:0px;top:0px;z-Index:10000"></span><iframe id="showStopper" style="display: none"></iframe>
+<script type="text/javascript" src="/js/myjs_2/classes/tools/tools.js"></script></head><body marginheight="0" marginwidth="0"><span id="showControl" ondblclick="this.innerHTML = ''" style="background-color:white;position:absolute;left:0px;top:0px;z-Index:10000"></span><iframe id="showStopper" style="display: none"></iframe>
 
 
 
 <!--script language="JavaScript" src="/js/inc/flash_rewriter.js"></script-->
-<script src="/js/inc/param_to_cookie.js"></script>
-<script>
-     document.write('<script src="/inc/php/channel_variable/set_channel_in_cookie.php?tail=' + (new Date()).getTime() + '"></s'+'cript>');
-</script><script src="/inc/php/channel_variable/set_channel_in_cookie.php?tail=1582517834224"></script>
+<script src="/js/inc/param_to_cookie.js" type="text/javascript"></script>
+<script type="text/javascript">
+<!--     
+document.write('<script src="/inc/php/channel_variable/set_channel_in_cookie.php?tail=' + (new Date()).getTime() + '"><\/s'+'cript>');
+//-->
+</script><script src="/inc/php/channel_variable/set_channel_in_cookie.php?tail=1582517825319"></script>
 <script src="/js/inc/video.js" type="text/javascript"></script>
-<script>
-function setCookie(name, value) {
+<script type="text/javascript">
+<!--
+ function setCookie(name, value) {
 			document.cookie = name + "=" + value + "; Path=/";
 		}
 function getCookie(name){
@@ -44,13 +44,16 @@ function getCookie(name){
 		return res[1];
 	return null;
 }
+//-->
 </script>
-<script>var timestamp = new Date()*1;
+<script type="text/javascript">
+<!--
+var timestamp = new Date()*1;
 var str = "<script src='/inc/php/ip.php?"+timestamp+"'><\/script>";
 document.write(str);
-</script><script src="/inc/php/ip.php?1582517836571"></script>
-<script src="https://service.ringcentral.com/misc/checkuser.asp"></script>
-
+//-->
+</script><script src="/inc/php/ip.php?1582517826428"></script>
+<script type="text/javascript" src="https://service.ringcentral.com/misc/checkuser.asp"></script>
 <script src="/adminJS/inc/dynamicTemplate.js" type="text/javascript"></script>
 
 
@@ -59,11 +62,11 @@ Copyright 1997-2009 Omniture, Inc. More info available at
 http://www.omniture.com -->
 <script language="JavaScript" type="text/javascript" src="/js/inc/s_code.js"></script>
 <script language="JavaScript" type="text/javascript"><!--
-if(typeof(IsDomainExcluded)!="undefined" && typeof(IsIPExcludedForOmniture)!="undefined")
+if(typeof(IsDomainExcluded)!="undefined")
 { 
 /* You may give each page an identifying name, server, and channel on
 the next lines. */
-s.pageName=document.location.pathname
+s.pageName = window.location.protocol + '//' + window.location.host + window.location.pathname
 s.server=""
 s.channel=typeof CookiesManager != 'undefined' && typeof CookiesManager.getCookie != 'undefined' && CookiesManager.getCookie('omniture_channel')? CookiesManager.getCookie('omniture_channel').replace(/\+/g,' ') : 'Other';
 s.pageType=""
@@ -91,7 +94,7 @@ var s_code=s.t();if(s_code)document.write(s_code)
 if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
 //--></script><noscript><a href="http://www.omniture.com" title="Web Analytics"><img
 src="http://rcentral-dev.112.2O7.net/b/ss/rcentral-dev/1/H.19.4--NS/0"
-height="1" width="1" border="0" alt="" /></a></noscript><!--/DO NOT REMOVE/-->
+height="1" width="1" border="0" alt="" ></a></noscript><!--/DO NOT REMOVE/-->
 <!-- End SiteCatalyst code version: H.19.4. -->
 
 <div class="homeFrame" align="center">
@@ -122,22 +125,25 @@ height="1" width="1" border="0" alt="" /></a></noscript><!--/DO NOT REMOVE/-->
 <tr valign="top">
 <td width="37"><img src="/images/template/default/top_left.gif" alt="" width="37" height="27"></td>
 <td width="260" height="27" background="/images/template/default/top_bg.gif">
-<table style="height: 27px;" border="0" cellspacing="0" cellpadding="0" width="260">
+
+
+<table width="260" cellspacing="0" cellpadding="0" border="0" style="height: 27px;">
 <tbody>
 <tr align="left">
-<td width="12"><img src="/images/1.gif" alt="" width="11" height="27"></td>
-<td width="13"><img src="/images/template/default/arrow_red.gif" alt="" width="9" height="9"></td>
-<td width="41"><a href="http://service.ringcentral.com/login.asp" rel="nofollow"><img class="blinkImg" src="/images/template/default/button4.gif" border="0" alt="" width="21" height="7"></a></td>
-<td width="13"><img src="/images/template/default/arrow.gif" alt="" width="9" height="9"></td>
-<td width="54"><a href="/whyringcentral/company.html"><img class="blinkImg" src="/images/template/default/button1.gif" border="0" alt="" width="35" height="7"></a></td>
-<td width="13"><img src="/images/template/default/arrow.gif" alt="" width="9" height="9"></td>
-<td width="64"><a href="/whyringcentral/contactus.html"><img class="blinkImg" src="/images/template/default/button2.gif" border="0" alt="" width="45" height="7"></a></td>
-<td width="13"><img src="/images/template/default/arrow.gif" alt="" width="9" height="9"></td>
-<td width="53"><a href="/whyringcentral/partnerwithus.html"><img class="blinkImg" src="/images/template/default/button3.gif" border="0" alt="" width="38" height="7"></a></td>
-<td width="12"><img src="/images/1.gif" alt="" width="12" height="27"></td>
+<td width="12"><img width="11" height="27" alt="" src="/images/1.gif"></td>
+<td width="131"></td>
+<td width="10"><img width="9" height="9" alt="" src="/images/template/default/arrow_red.gif"></td>
+<td width="30"><a rel="nofollow" title="Member Login" href="http://service.ringcentral.com/login.asp">
+<img width="21" height="7" border="0" class="blinkImg" alt="Member Login" src="/images/template/default/button4.gif"></a></td>
+<td width="10"><img width="9" height="9" alt="" src="/images/template/default/arrow.gif"></td>
+<td width="25"><a title="Contact Us" href="/whyringcentral/contactus.html" shape="rect"><img width="45" height="7" border="0" class="blinkImg" name="contactus" src="/images/template/default/button2.gif"></a>
+</td>
+<td width="2"><img width="2" height="27" alt="" src="/images/1.gif"></td>
 </tr>
 </tbody>
 </table>
+
+
 </td>
 <td width="35"><img src="/images/template/default/top_right.gif" alt="" width="35" height="27"></td>
 </tr>
@@ -421,7 +427,9 @@ try{
 catch(e){}
 </script>
 
-<script language="javascript">
+<script src="/js/inc/connors_track.js" type="text/javascript"></script>
+<script type="text/javascript" language="javascript">
+<!--
 var ch = "?"; 
 var sr = "http://service.ringcentral.com/misc/se_track.asp";
 if (document.location.search.length > 1) 
@@ -440,13 +448,13 @@ sr += ch + "r=" + escape(document.referrer)
 } 
 var im = new Image(); 
 im.src = sr;
-</script>
-
-
-
-
-
-
-
+//-->
+</script><!-- server: 10.10.1.31 -->
+<!-- time: 2009-10-05 02:41:02 -->
+<!-- include: 0.109049 -->
+<!-- init: 0.025069 -->
+<!-- db: 0.019066 -->
+<!-- render: 0.030807 -->
+<!-- total: 0.183991 -->
 
 </body></html>
