clickbook.net (archived on 2009-10-14)
{
  "alexa_rank": 222050,
  "analysis_subcorpus": true,
  "categories": "business;education;travel",
  "char_count": 1158,
  "classifier_probability": 0.82,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.24,
  "homepage_snapshot_redirected_domain": "clickbook.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091014055541id_/http://www.clickbook.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091014055541id_/http%3A//clickbook.net",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "clickbook.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091014060945id_/http%3A//www.clickbook.net/dev/site.nsf/ConfidentialityInfo",
  "policy_title": "ClickBook.net - Privacy Policy",
  "policy_url": "clickbook.net/dev/site.nsf/ConfidentialityInfo",
  "sha1": "4b074d11e5f8d934a8922e7de596f1bff5a1093c",
  "simhash": 9775026850076104826,
  "simhash_updated": false,
  "site_hostname": "clickbook.net",
  "site_url": "http://clickbook.net",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20091014060945",
  "word_count": 192,
  "year": 2009
}

--- a/c/cl/cli/clickbook.net.html
+++ b/c/cl/cli/clickbook.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the clickbook.net privacy policy that was archived on 2009-02-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090217213041id_/http%3A//www.clickbook.net/dev/site.nsf/ConfidentialityInfo) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the clickbook.net privacy policy that was archived on 2009-10-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091014060945id_/http%3A//www.clickbook.net/dev/site.nsf/ConfidentialityInfo) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">              
@@ -66,18 +66,20 @@ document.forms[0].submit()
 <td>
 <div><img alt="spacer" src="/icons/ecblank.gif" width="480"></div>
 <div id="links">
-&nbsp;&nbsp;<a target="_top" href="http://www.clickbook.net/dev/site.nsf">Home</a>
+&nbsp;&nbsp;<a target="_top" href="http://www.ClickBook.net/names.nsf?logout">Home</a>
 &nbsp;
 <a target="_top" class="link small" href="/dev/site.nsf/AboutInfo!OpenForm">About ClickBook</a>
 &nbsp;
 <a target="_top" href="/dev/site.nsf/ContactUs!OpenForm">Contact Us</a>
 &nbsp;
-<a target="_top" href="/dev/site.nsf/FAQ!OpenForm">Common Questions</a>
-&nbsp;<a target="_top" href="http://www.clickbook.net//dev/bulletin.nsf">Community</a>
-&nbsp;<a target="_top" href="/dev/bc.nsf/SPReg!OpenForm">Sign Up</a>
+<a target="_top" href="/dev/site.nsf/FAQ!OpenForm">Questions</a>
+&nbsp;<a target="_top" href="http://www.ClickBook.net/dev/bulletin.nsf">Community</a>
+&nbsp;<a target="_top" href="http://www.ClickBook.net/dev/blog.nsf">Blog</a>
+&nbsp;<a target="_top" href="http://www.ClickBook.net/dev/search.nsf">Search</a>
+&nbsp;<a target="_top" href="http://www.ClickBook.net/dev/bc.nsf/SPReg!OpenForm">Sign Up</a>
 </div>
 </td>
-<td align="right" width="300">
+<td align="right">
 </td>
 <td width="10"></td>
 </tr>
@@ -107,14 +109,13 @@ We treat all personal information, collected by us, with respect and confidentia
 </td></tr>
 </tbody></table>
 </td></tr></tbody></table>
-<br>
-<hr style="margin-bottom: 10px; color: #d3d3d3; height: 1px; border: #d3d3d3; background: #d3d3d3">
-<hr style="margin-top: 0px">
+<br><br><br>
 <div align="center">
 <a rel="nofollow" target="_top" class="link small" href="http://www.clickbook.net/dev/site.nsf/DisclaimerInfo" title="Disclaimer">Disclaimer</a>&nbsp;
 <a rel="nofollow" target="_top" class="link small" href="http://www.clickbook.net/dev/site.nsf/ConfidentialityInfo" title="Privacy Policy">Privacy Policy</a>&nbsp;
 <a rel="nofollow" target="_top" class="link small" href="http://www.clickbook.net/dev/site.nsf/TermsInfo!OpenForm&amp;noInput=1" title="Terms &amp; Conditions">Terms &amp; Conditions</a>&nbsp;
 <a rel="nofollow" target="_top" class="link small" href="http://www.clickbook.net/dev/site.nsf/ContactUs" title="Contact Us">Contact Us</a>&nbsp;
+<a target="_top" class="link small" href="http://www.clickbook.net/dev/search.nsf/search!OpenForm" title="Search">Search</a>&nbsp;<br><br>
 <br><img alt="spacer" src="/icons/ecblank.gif" height="10" width="1" border="0">
 </div>
 <script type="text/javascript">
