rgemonitor.com (archived on 2009-10-16)
{
  "alexa_rank": 66370,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 10573,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.01,
  "homepage_snapshot_redirected_domain": "rgemonitor.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20091002083814id_/http://www.rgemonitor.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20091002083814id_/http%3A//rgemonitor.com",
  "interval": "2009_B",
  "link_text": "privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "rgemonitor.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091016221712id_/http%3A//www.rgemonitor.com/component/option%2Cstatic/inc%2Cprivacy/Itemid%2C95",
  "policy_title": "RGE - RGE Monitor Privacy Policy and Conditions",
  "policy_url": "rgemonitor.com/component/option,static/inc,privacy/Itemid,95",
  "sha1": "19ed7d440cceaa0d6442d7785bfe3d80a9703068",
  "simhash": 15045850401836455145,
  "simhash_updated": false,
  "site_hostname": "rgemonitor.com",
  "site_url": "http://rgemonitor.com",
  "smog": 14.88,
  "strict_updated": false,
  "timestamp": "20091016221712",
  "word_count": 1700,
  "year": 2009
}

--- a/r/rg/rge/rgemonitor.com.html
+++ b/r/rg/rge/rgemonitor.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rgemonitor.com privacy policy that was archived on 2009-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616050422id_/http%3A//www.rgemonitor.com/component/option%2Cstatic/inc%2Cprivacy/Itemid%2C95) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rgemonitor.com privacy policy that was archived on 2009-10-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20091016221712id_/http%3A//www.rgemonitor.com/component/option%2Cstatic/inc%2Cprivacy/Itemid%2C95) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -49,6 +49,7 @@
 <li class="flyout"><a href="/index.php">Home</a></li>
 <li class="flyout"><a href="/component/option,com_content/task,recent/Itemid,113">New @ RGE</a></li>
 <li class="flyout"><a href="/707">Complete Coverage of the Global Financial Crisis</a></li>
+<li class="flyout"><a href="/713">The Future of Global Finance</a></li>
 <li><div class="divider"></div>
 </li>
 <li class="flyout">
@@ -374,8 +375,8 @@ function popUp(URL) {day = new Date();id = day.getTime();eval("page" + id + " = 
 <!--
 <div style="background: #f90; color: #000; padding: 10px;">
 
-Script generated in: 0.07
-Request IP: 67.202.41.3
+Script generated in: 0.02
+Request IP: 67.202.15.176
 </div>
 -->
 
